# celer

./: BENCHMARKS.md  CLAUDE.md  Cargo.toml  OVERVIEW.md  PHASE4.md  PHASE5.md
benches/go/: go.mod
benches/go/cmd/business_logic/: main.go
benches/go/cmd/fibonacci/: main.go
benches/go/cmd/for_loop_sum/: main.go
benches/go/cmd/http_compute_endpoint/: main.go
benches/go/cmd/http_path_param/: main.go
benches/go/cmd/json_serialize_dynamic/: main.go
benches/go/cmd/json_serialize_static/: main.go
benches/rust/: Cargo.toml
crates/celer-adapter-core/: Cargo.toml
crates/celer-adapter-core/src/: detect.rs  error.rs  lib.rs  route.rs  traits.rs
crates/celer-bench/: Cargo.toml
crates/celer-bench/src/: lib.rs  reporter.rs  runner.rs  workloads.rs
crates/celer-cli/: Cargo.toml
crates/celer-cli/src/: main.rs  pipeline.rs
crates/celer-cli/src/commands/: bench.rs  cloud.rs  compile.rs  mod.rs  run.rs  serve.rs
crates/celer-cloud/: Cargo.toml
crates/celer-cloud/src/: compiler.rs  config.rs  error.rs  handlers.rs  job.rs  lib.rs  server.rs
crates/celer-codegen/: Cargo.toml
crates/celer-codegen/src/: compiler.rs  context.rs  emit_collection.rs  emit_expr.rs  emit_function.rs  emit_json.rs  emit_stmt.rs  error.rs  lib.rs  types.rs
crates/celer-django/: Cargo.toml
crates/celer-django/src/: adapter.rs  error.rs  lib.rs  patterns.rs
crates/celer-fastapi/: Cargo.toml
crates/celer-fastapi/src/: adapter.rs  error.rs  lib.rs  route.rs
crates/celer-flask/: Cargo.toml
crates/celer-flask/src/: adapter.rs  error.rs  lib.rs  route.rs
crates/celer-hir/: Cargo.toml
crates/celer-hir/src/: class_def.rs  error.rs  expr.rs  func.rs  lib.rs  module.rs  stmt.rs  types.rs
crates/celer-parser/: Cargo.toml
crates/celer-parser/src/: convert_decorator.rs  convert_expr.rs  convert_stmt.rs  convert_type.rs  converter.rs  error.rs  lib.rs
crates/celer-pyhost/: Cargo.toml
crates/celer-pyhost/src/: asgi.rs  error.rs  host.rs  lib.rs  scope.rs
crates/celer-runtime/: Cargo.toml
crates/celer-runtime/src/: bridge.rs  compiled.rs  config.rs  cpython_runner.rs  error.rs  fallback.rs  lib.rs  linker.rs  native.rs
crates/celer-server/: Cargo.toml
crates/celer-server/src/: body.rs  error.rs  lib.rs  query.rs  request.rs  response.rs  router.rs  server.rs
crates/celer-typeinfer/: Cargo.toml
crates/celer-typeinfer/src/: classes.rs  compilability.rs  context.rs  engine.rs  error.rs  functions.rs  lib.rs
examples/: basic.dylib  basic.ll  basic.py  business_logic.py  fastapi_app.py  fibonacci.py
