[workspace]
members = [
    "crates/celer-hir",
    "crates/celer-parser",
    "crates/celer-typeinfer",
    "crates/celer-codegen",
    "crates/celer-runtime",
    "crates/celer-cli",
    "crates/celer-fastapi",
    "crates/celer-flask",
    "crates/celer-django",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
# Internal crates
celer-hir = { path = "crates/celer-hir" }
celer-parser = { path = "crates/celer-parser" }
celer-typeinfer = { path = "crates/celer-typeinfer" }
celer-codegen = { path = "crates/celer-codegen" }
celer-runtime = { path = "crates/celer-runtime" }
celer-fastapi = { path = "crates/celer-fastapi" }
celer-flask = { path = "crates/celer-flask" }
celer-django = { path = "crates/celer-django" }

# External dependencies
rustpython-parser = "0.4.0"
inkwell = { version = "0.8.0", features = ["llvm20-1"] }
pyo3 = { version = "0.24", features = ["auto-initialize"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
