[workspace]
members = [
    "crates/celer-hir",
    "crates/celer-parser",
    "crates/celer-typeinfer",
    "crates/celer-codegen",
    "crates/celer-runtime",
    "crates/celer-cli",
    "crates/celer-adapter-core",
    "crates/celer-fastapi",
    "crates/celer-flask",
    "crates/celer-django",
    "crates/celer-bench",
    "crates/celer-server",
    "crates/celer-cloud",
    "crates/celer-pyhost",
]
exclude = ["benches/rust"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
# Internal crates
celer-adapter-core = { path = "crates/celer-adapter-core" }
celer-hir = { path = "crates/celer-hir" }
celer-parser = { path = "crates/celer-parser" }
celer-typeinfer = { path = "crates/celer-typeinfer" }
celer-codegen = { path = "crates/celer-codegen" }
celer-runtime = { path = "crates/celer-runtime" }
celer-fastapi = { path = "crates/celer-fastapi" }
celer-flask = { path = "crates/celer-flask" }
celer-django = { path = "crates/celer-django" }
celer-bench = { path = "crates/celer-bench" }
celer-server = { path = "crates/celer-server" }
celer-cloud = { path = "crates/celer-cloud" }
celer-pyhost = { path = "crates/celer-pyhost" }

# External dependencies
rustpython-parser = "0.4.0"
inkwell = { version = "0.8.0", features = ["llvm20-1"] }
pyo3 = { version = "0.24", features = ["auto-initialize"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
num-traits = "0.2"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
