[package]
name = "celer-bench-external"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "json_serialize_static"
path = "src/bin/json_serialize_static.rs"

[[bin]]
name = "json_serialize_dynamic"
path = "src/bin/json_serialize_dynamic.rs"

[[bin]]
name = "fibonacci"
path = "src/bin/fibonacci.rs"

[[bin]]
name = "for_loop_sum"
path = "src/bin/for_loop_sum.rs"

[[bin]]
name = "business_logic"
path = "src/bin/business_logic.rs"

[[bin]]
name = "http_path_param"
path = "src/bin/http_path_param.rs"

[[bin]]
name = "http_compute_endpoint"
path = "src/bin/http_compute_endpoint.rs"
