[package]
name = "celer-bench"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Benchmark runner for Celer AOT compiler"

[dependencies]
celer-hir.workspace = true
celer-parser.workspace = true
celer-typeinfer.workspace = true
celer-codegen.workspace = true
celer-runtime.workspace = true
inkwell.workspace = true
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
