[package]
name = "celer-fastapi"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "FastAPI framework adapter for Celer AOT compiler"

[dependencies]
celer-adapter-core.workspace = true
celer-hir.workspace = true
thiserror.workspace = true
tracing.workspace = true
